services/speed/deploy/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speed
  labels:
    app.kubernetes.io/name: speed
    app.kubernetes.io/part-of: pokecalc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speed
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speed
        app.kubernetes.io/part-of: pokecalc
    spec:
      automountServiceAccountToken: false
      containers:
        - name: speed
          image: pokecalc/speed:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 1
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
