services/speed/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speed
  labels:
    app.kubernetes.io/name: speed
    app.kubernetes.io/part-of: pokecalc
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/speed
            pathType: Prefix
            backend:
              service:
                name: speed
                port:
                  name: http
